--- a/Pipfile
+++ b/Pipfile
@@ -18,15 +18,16 @@ faker= "*"
 mako = "1.2.3"
 markupsafe = "2.1.1"
 psycopg2 = "*"
-python-dotenv = "0.21.0"
+python-dotenv = "*"
 pytz = "2022.5"
 setuptools = "65.5.0"
 sqlalchemy = "1.4.42"
 sqlalchemy-serializer = "1.4.1"
 werkzeug = "2.2.2"
+intasend-python = "*"
+flask-jwt-extended = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.10"
-
