--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ sqlalchemy-serializer = "1.4.1"
 werkzeug = "2.2.2"
 intasend-python = "*"
 flask-jwt-extended = "*"
+flask-mail = "*"
 
 [dev-packages]
 
