--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,51 @@
 alembic==1.13.1
 aniso8601==9.0.1
+annotated-types==0.6.0
+anyio==3.7.1
+apturl==0.5.2
+asttokens==2.4.1
+attrs==23.1.0
 bcrypt==3.2.0
-flask-bcrypt==1.0.1
+beautifulsoup4==4.12.3
+blinker==1.7.0
+Brlapi==0.8.3
+bs4==0.0.2
+certifi==2020.6.20
+chardet==4.0.0
+charset-normalizer==2.0.12
 click==8.1.7
+colorama==0.4.4
+command-not-found==0.3
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+decorator==5.1.1
+defer==1.0.6
+distlib==0.3.7
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+duplicity==0.8.21
+exceptiongroup==1.2.0
+executing==2.0.1
 Faker==21.0.0
+fasteners==0.14.1
+filelock==3.13.1
 Flask==3.0.1
+Flask-Admin==1.6.1
+Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.5
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
+future==0.18.2
 greenlet==3.0.2
 gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.2
+httplib2==0.20.2
+httpx==0.25.2
+idna==3.3
 importlib-metadata==4.6.4
 iniconfig==2.0.0
 install==1.3.5
@@ -19,20 +53,86 @@ intasend-python==1.0.9
 ipdb==0.13.13
 ipython==8.18.1
 itsdangerous==2.1.2
+jedi==0.19.1
+jeepney==0.7.1
 Jinja2==3.1.3
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
 Mako==1.1.3
 MarkupSafe==2.1.4
+matplotlib-inline==0.1.6
+monotonic==1.6
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+olefile==0.46
+openai==1.3.5
+packaging==23.2
+paramiko==2.9.3
+parso==0.8.3
+pexpect==4.8.0
+Pillow==9.0.1
+pipenv==2023.11.15
+platformdirs==4.0.0
+pluggy==1.3.0
+prompt-toolkit==3.0.43
+protobuf==3.12.4
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
+pycairo==1.20.1
+pycups==2.0.1
+pydantic==2.5.2
+pydantic_core==2.14.5
+Pygments==2.11.2
+PyGObject==3.42.1
 PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyRFC3339==1.1
 pytest==7.1.3
+python-apt==2.4.0+ubuntu3
+python-dateutil==2.8.1
+python-debian==0.1.43+ubuntu1.1
 python-dotenv==1.0.1
 pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
 regex==2023.12.25
+reportlab==3.6.8
 requests==2.27.1
+SecretStorage==3.3.1
 six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
 SQLAlchemy==2.0.23
 SQLAlchemy-serializer==1.4.1
+stack-data==0.6.3
+systemd-python==234
+tomli==2.0.1
+tqdm==4.66.1
+traitlets==5.14.0
+typing_extensions==4.8.0
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+usb-creator==0.3.7
 virtualenv==20.25.0
+wadllib==1.3.6
+wcwidth==0.2.12
 Werkzeug==3.0.1
+WTForms==3.1.2
+xdg==5
+xkit==0.0.0
 zipp==1.0.0
