--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,88 @@
-alembic==1.13.1
+alembic==1.8.1
 aniso8601==9.0.1
-annotated-types==0.6.0
-anyio==3.7.1
-apturl==0.5.2
 asttokens==2.4.1
-attrs==23.1.0
-bcrypt==3.2.0
-beautifulsoup4==4.12.3
+attrs==23.2.0
+Babel==2.14.0
+bcrypt==4.1.2
 blinker==1.7.0
-Brlapi==0.8.3
-bs4==0.0.2
-certifi==2020.6.20
-chardet==4.0.0
-charset-normalizer==2.0.12
-click==8.1.7
-colorama==0.4.4
-command-not-found==0.3
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
+certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.3
+cloudinary==1.39.1
 decorator==5.1.1
-defer==1.0.6
-distlib==0.3.7
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-duplicity==0.8.21
+distlib==0.3.8
 exceptiongroup==1.2.0
 executing==2.0.1
-Faker==21.0.0
-fasteners==0.14.1
-filelock==3.13.1
-Flask==3.0.1
+Faker==24.11.0
+filelock==3.13.3
+Flask==2.2.5
 Flask-Admin==1.6.1
+Flask-BabelEx==0.9.4
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.6.0
-Flask-Migrate==4.0.5
-Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.1.1
-future==0.18.2
-greenlet==3.0.2
+Flask-Login==0.6.3
+Flask-Mail==0.9.1
+Flask-Migrate==3.1.0
+Flask-Principal==0.4.0
+Flask-RESTful==0.3.9
+Flask-Security==3.0.0
+Flask-SQLAlchemy==3.0.2
+Flask-WTF==1.2.1
+greenlet==3.0.3
 gunicorn==21.2.0
-h11==0.14.0
-httpcore==1.0.2
-httplib2==0.20.2
-httpx==0.25.2
-idna==3.3
-importlib-metadata==4.6.4
+idna==3.7
+importlib-metadata==6.0.0
+importlib-resources==5.10.0
 iniconfig==2.0.0
 install==1.3.5
 intasend-python==1.0.9
 ipdb==0.13.13
 ipython==8.18.1
-itsdangerous==2.1.2
+itsdangerous==2.2.0
 jedi==0.19.1
-jeepney==0.7.1
 Jinja2==3.1.3
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-louis==3.20.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-MarkupSafe==2.1.4
+Mako==1.2.3
+MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
-monotonic==1.6
-more-itertools==8.10.0
-netifaces==0.11.0
-oauthlib==3.2.0
-olefile==0.46
-openai==1.3.5
-packaging==23.2
-paramiko==2.9.3
+more-itertools==10.2.0
+packaging==24.0
 parso==0.8.3
-pexpect==4.8.0
-Pillow==9.0.1
-pipenv==2023.11.15
-platformdirs==4.0.0
-pluggy==1.3.0
+passlib==1.7.4
+pdfkit==1.0.0
+pexpect==4.9.0
+pillow==10.3.0
+platformdirs==4.2.0
+pluggy==1.4.0
 prompt-toolkit==3.0.43
-protobuf==3.12.4
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
-pycairo==1.20.1
-pycups==2.0.1
-pydantic==2.5.2
-pydantic_core==2.14.5
-Pygments==2.11.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyRFC3339==1.1
+pycparser==2.21
+Pygments==2.17.2
+PyJWT==2.8.0
 pytest==7.1.3
-python-apt==2.4.0+ubuntu3
-python-dateutil==2.8.1
-python-debian==0.1.43+ubuntu1.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
+pytz==2022.5
 regex==2023.12.25
-reportlab==3.6.8
-requests==2.27.1
-SecretStorage==3.3.1
+reportlab==4.2.0
+requests==2.31.0
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
-SQLAlchemy==2.0.23
+speaklater==1.3
+SQLAlchemy==1.4.42
 SQLAlchemy-serializer==1.4.1
 stack-data==0.6.3
-systemd-python==234
 tomli==2.0.1
-tqdm==4.66.1
-traitlets==5.14.0
-typing_extensions==4.8.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-usb-creator==0.3.7
+traitlets==5.14.2
+typing_extensions==4.10.0
+urllib3==2.2.1
 virtualenv==20.25.0
-wadllib==1.3.6
-wcwidth==0.2.12
-Werkzeug==3.0.1
+wcwidth==0.2.13
+Werkzeug==2.2.2
 WTForms==3.1.2
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
+zipp==3.18.1
