Google auth created

--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,10 @@ flask-security = "*"
 cloudinary = "*"
 pdfkit = "*"
 reportlab = "*"
+google-auth = "*"
+google-auth-oauthlib = "*"
+google-auth-httplib2 = "*"
+google-api-python-client = "*"
 
 [dev-packages]
 
