--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,22 @@ alembic==1.8.1
 aniso8601==9.0.1
 asttokens==2.4.1
 attrs==23.2.0
-Babel==2.14.0
-bcrypt==4.1.2
-blinker==1.7.0
+Babel==2.15.0
+bcrypt==4.1.3
+blinker==1.8.2
 cachelib==0.9.0
-certifi==2024.2.2
+cachetools==5.4.0
+certifi==2024.7.4
 cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.3
-cloudinary==1.39.1
+cloudinary==1.40.0
 decorator==5.1.1
 distlib==0.3.8
 exceptiongroup==1.2.0
 executing==2.0.1
-Faker==24.11.0
+Faker==26.0.0
 filelock==3.13.3
 Flask==2.2.5
 Flask-Admin==1.6.1
@@ -26,15 +27,22 @@ Flask-Caching==2.3.0
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.6.0
 Flask-Login==0.6.3
-Flask-Mail==0.9.1
+Flask-Mail==0.10.0
 Flask-Migrate==3.1.0
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.9
 Flask-Security==3.0.0
 Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.2.1
+google-api-core==2.19.1
+google-api-python-client==2.137.0
+google-auth==2.32.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.63.2
 greenlet==3.0.3
 gunicorn==21.2.0
+httplib2==0.22.0
 idna==3.7
 importlib-metadata==6.0.0
 importlib-resources==5.10.0
@@ -42,38 +50,45 @@ iniconfig==2.0.0
 install==1.3.5
 intasend-python==1.0.9
 ipdb==0.13.13
-ipython==8.18.1
+ipython==7.31.1
 itsdangerous==2.2.0
 jedi==0.19.1
-Jinja2==3.1.3
+Jinja2==3.1.4
 Mako==1.2.3
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
 more-itertools==10.2.0
+oauthlib==3.2.2
 packaging==24.0
 parso==0.8.3
 passlib==1.7.4
 pdfkit==1.0.0
 pexpect==4.9.0
-pillow==10.3.0
+pillow==10.4.0
 platformdirs==4.2.0
 pluggy==1.4.0
 prompt-toolkit==3.0.43
-psycopg2==2.9.9
+proto-plus==1.24.0
+protobuf==5.27.2
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.21
 Pygments==2.17.2
 PyJWT==2.8.0
+pyparsing==3.1.2
 pytest==7.1.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2022.5
 regex==2023.12.25
-reportlab==4.2.0
-requests==2.31.0
+reportlab==4.2.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
 six==1.16.0
 speaklater==1.3
 SQLAlchemy==1.4.42
@@ -82,9 +97,10 @@ stack-data==0.6.3
 tomli==2.0.1
 traitlets==5.14.2
 typing_extensions==4.10.0
-urllib3==2.2.1
+uritemplate==4.1.1
+urllib3==2.2.2
 virtualenv==20.25.0
 wcwidth==0.2.13
 Werkzeug==2.2.2
 WTForms==3.1.2
-zipp==3.18.1
+zipp==3.19.2
