--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aniso8601==9.0.1
 asttokens==2.4.1
 attrs==23.2.0
 Babel==2.15.0
-bcrypt==4.1.3
+bcrypt==4.2.0
 blinker==1.8.2
 cachelib==0.9.0
 cachetools==5.4.0
@@ -12,12 +12,13 @@ cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.3
-cloudinary==1.40.0
+cloudinary==1.41.0
 decorator==5.1.1
+Deprecated==1.2.14
 distlib==0.3.8
 exceptiongroup==1.2.0
 executing==2.0.1
-Faker==26.0.0
+Faker==26.2.0
 filelock==3.13.3
 Flask==2.2.5
 Flask-Admin==1.6.1
@@ -26,6 +27,7 @@ Flask-Bcrypt==1.0.1
 Flask-Caching==2.3.0
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.6.0
+Flask-Limiter==3.8.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==3.1.0
@@ -35,8 +37,8 @@ Flask-Security==3.0.0
 Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.2.1
 google-api-core==2.19.1
-google-api-python-client==2.137.0
-google-auth==2.32.0
+google-api-python-client==2.140.0
+google-auth==2.33.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.63.2
@@ -48,18 +50,22 @@ importlib-metadata==6.0.0
 importlib-resources==5.10.0
 iniconfig==2.0.0
 install==1.3.5
-intasend-python==1.0.9
+intasend-python==1.1.2
 ipdb==0.13.13
-ipython==7.31.1
+ipython==8.18.1
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
+limits==3.13.0
 Mako==1.2.3
+markdown-it-py==3.0.0
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 more-itertools==10.2.0
 oauthlib==3.2.2
-packaging==24.0
+ordered-set==4.1.0
+packaging==24.1
 parso==0.8.3
 passlib==1.7.4
 pdfkit==1.0.0
@@ -69,7 +75,8 @@ platformdirs==4.2.0
 pluggy==1.4.0
 prompt-toolkit==3.0.43
 proto-plus==1.24.0
-protobuf==5.27.2
+protobuf==5.27.3
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -77,8 +84,8 @@ py==1.11.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.21
-Pygments==2.17.2
-PyJWT==2.8.0
+Pygments==2.18.0
+PyJWT==2.9.0
 pyparsing==3.1.2
 pytest==7.1.3
 python-dateutil==2.9.0.post0
@@ -88,6 +95,7 @@ regex==2023.12.25
 reportlab==4.2.2
 requests==2.32.3
 requests-oauthlib==2.0.0
+rich==13.7.1
 rsa==4.9
 six==1.16.0
 speaklater==1.3
@@ -96,11 +104,12 @@ SQLAlchemy-serializer==1.4.1
 stack-data==0.6.3
 tomli==2.0.1
 traitlets==5.14.2
-typing_extensions==4.10.0
+typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.2.2
 virtualenv==20.25.0
 wcwidth==0.2.13
 Werkzeug==2.2.2
+wrapt==1.16.0
 WTForms==3.1.2
 zipp==3.19.2
