--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,7 @@ google-auth-oauthlib = "*"
 google-auth-httplib2 = "*"
 google-api-python-client = "*"
 flask-limiter = "*"
+openpyxl = "*"
 
 [dev-packages]
 
